[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.7.0"
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-style-in-rs = "0.4.1"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
]

[dependencies.yew-scroll-area]
path = "../../yew-scroll-area"
